--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,18 +6,32 @@ set(CMAKE_CXX_FLAGS "-O3 -Wall")
 set (CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+include_directories(headers)
+
 #Can manually add the sources using the set command as follows:
 set(SOURCES
-    shape.cpp
-    circle.cpp
-    models.cpp
+    headers/rectangle.h
+    headers/shape.h
+    headers/circle.h
+    headers/models.h
+    headers/polygon.h
+    headers/triangle.h
+    source/rectangle.cpp
+    source/polygon.cpp
+    source/shape.cpp
+    source/circle.cpp
+    source/models.cpp
+    source/triangle.cpp
 )
-add_executable(cps.out main.cpp ${SOURCES})
+add_executable(cps.out source/main.cpp ${SOURCES})
 
 set(CATCH_INCLUDE_DIR tests)
 set(TEST_SOURCES
     tests/test-main.cpp
     tests/test-circle.cpp
+    tests/test-rectangle.cpp
+    tests/test-polygon.cpp
+    tests/test-triangle.cpp
 )
 
 add_library(Catch INTERFACE)
